<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.andrea.iotcorteuno.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen1"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:src="@drawable/if_ilustracoes_04_02_1519787" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/namelogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:hint="@string/Name_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/lastnamelogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:hint="@string/Lastname_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/addresslogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:hint="@string/Address_login"
            android:inputType="text" />

        <EditText
            android:id="@+id/emaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:hint="@string/Email_login"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/enviarlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Enviar_login" />

    </LinearLayout>

    </LinearLayout>

</FrameLayout>
